--- a/car-site/bmw-style.css
+++ b/car-site/bmw-style.css
@@ -3,10 +3,37 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-body {
+html, body {
+  margin: 0;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
   font-family: 'Oswald', sans-serif;
   background: #0b0d14;
-  color: white;
 }
 
+.slider {
+  display: flex;
+  height: 100vh;
+  width: 100wd;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+}
+.slide {
+  flex: 0 0 100vw;
+  height: 100vh;
+  scroll-snap-align:start;
+  position: relative;
+}
+.page1 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url("./images/behance_img_7.jpg");
+  background-size: cover;
+  background-position: center;
+  
+}
