--- a/car-site/bmw-style.css
+++ b/car-site/bmw-style.css
@@ -30,10 +30,30 @@ html, body {
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
   background-image: url("./images/behance_img_7.jpg");
   background-size: cover;
   background-position: center;
   
+}
+.menu {
+  color: white;
+  align-items: center;
+  padding-left: 90px;
+  padding-top: 40vh;
+
+}
+.menu h4 {
+  font-size: 20px;
+  letter-spacing: 2px;
+  margin-bottom: 26px;
+  opacity: 0.8;
+  cursor: pointer;
+  
+}
+.menu p {
+  font-size: 18px;
+  letter-spacing: 2px;
+  margin-bottom: 26px;
+  opacity: 0.8;
+  cursor: pointer;
 }
