--- a/car-site/bmw-style.css
+++ b/car-site/bmw-style.css
@@ -111,7 +111,7 @@ html, body {
   width: 100%;
   height: 100%;
   display: flex;
-  background-image: url(./images/behance_img_12.jpg);
+  background-image: url(./images/bmw_emplom-removebg-preview.png);
   background-size: cover;
   background-position: center;
 }
@@ -120,6 +120,7 @@ html, body {
   height: 100%;
   display: flex;
   background-image: url(./images/behance_img_5.jpg);
+  background-image: url(./images/bmw_steering.png);
   background-size: cover;
   background-position: center;
 }
