--- a/car-site/bmw-style.css
+++ b/car-site/bmw-style.css
@@ -14,7 +14,10 @@ html, body {
 .page-logos {
   position: absolute;
   z-index: 10;
+  inset: 0;
   cursor: pointer;
+  border: 1px;
+  height: 1px;
 }
 
 .logo {
@@ -31,11 +34,13 @@ html, body {
   
 }
 
-.youtube {top: 42vh;}
+.facebook {top: 40vh;}
 
-.instagram {top: 50vh;}
+.linkedin {top: 44vh;}
 
-.facebook {top: 58vh;}
+.instagram {top: 48vh;}
+
+.youtube {top: 52vh;}
 
 .slider {
   display: flex;
@@ -61,17 +66,19 @@ html, body {
   
 }
 .page1-blur {
-  width: 50vw;
+  width: 65vw;
   height: 100vh;
   background: linear-gradient(135deg, rgba(15, 18, 30, 0.92), rgba(15, 18, 30, 0.65));
   backdrop-filter: blur(5px);
   display: flex;
   align-items: center;
   padding-left: 90px;
+  clip-path: polygon(0% 0%, 80% 0%, 60% 100%, 0% 100%);
 
 }
 .menu {
   color: white;
+  padding-left: 6vw;
 
 }
 .menu h4 {
@@ -88,6 +95,14 @@ html, body {
   margin-bottom: 26px;
   opacity: 0.8;
   cursor: pointer;
+}
+
+.menu h4:hover {
+  transform: translateX(4px);
+}
+
+.menu p:hover {
+  transform: translateX(4px);
 }
 .page2 {
   width: 100%;
@@ -133,12 +148,15 @@ html, body {
   background-position: center;
 }
 .page7 {
+  position: relative;
   width: 100%;
   height: 100%;
   display: flex;
   background-image: url(./images/behance_img_10.jpg);
   background-size: cover;
   background-position: center;
+  align-items: center;
+  justify-content: center;
 }
 .page8 {
   width: 100%;
@@ -150,32 +168,36 @@ html, body {
   background-repeat: no-repeat;
 }
 .testdrive-blur {
-  width: 50vw;
+  width: 60vw;
   height: 100vh;
   background: linear-gradient(135deg, rgba(15, 18, 30, 0.9), rgba(15, 18, 30, 0.4));
   backdrop-filter: blur(5px);
   padding: 80px 70px;
   color: white;
   z-index: 2;
+  clip-path: polygon(0% 0%, 80% 0%, 60% 100%, 0% 100%);
 
 }
 .testdrive-blur h2 {
+  padding-left: 80px;
   font-size: 29px;
   letter-spacing: 3px;
   margin-bottom: 10px;
 
 }
 .subtitle {
+  padding-left: 80px;
   font-size: 20px;
   letter-spacing: 1px;
   margin-bottom: 40px;
 
 }
 .testdrive-form {
+  padding-left: 80px;
   display: grid;
   flex-direction: column;
   gap: 24px;
-
+  width: 500px;
 }
 .testdrive-form input {
   background: transparent;
@@ -187,6 +209,10 @@ html, body {
   outline: none;
 
 }
+
+.testdrive-form input::placeholder {
+  color: rgba(255, 255, 255, 0.5);
+} 
 .testdrive-form button {
   background: linear-gradient(135deg, rgb(161, 0, 79), rgb(225, 0, 111));
   border: none;
@@ -198,4 +224,8 @@ html, body {
   letter-spacing: 2px;
   cursor: pointer;
 
+}
+.testdrive-form button:hover {
+  transform: translateX(4px);
+  transition: 0.03s ease;
 }
