--- a/car-site/bmw-style.css
+++ b/car-site/bmw-style.css
@@ -130,15 +130,87 @@ html, body {
   background-position: center;
 
 }
+
 .page3 {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  background-image: url(./images/behance_img_7.jpg);
-  background-image: url(./images/behance_img_5.jpg);
-  background-size: cover;
-  background-position: center;
+  position:relative;
+  width:100%;
+  height:100vh;
+  overflow:hidden;
+  background:
+    radial-gradient(circle at 12% 30%, rgba(60,0,120,.95), transparent 55%),
+    radial-gradient(circle at 85% 70%, rgba(200,0,90,.95), transparent 60%),
+    linear-gradient(120deg, rgb(5,0,16), rgb(12,0,24), rgb(24,0,31));
 }
+.page3::after{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:linear-gradient(
+    90deg,
+    rgba(0,0,0,.80) 0%,
+    rgba(0,0,0,.45) 35%,
+    transparent 70%
+  );
+  z-index:1;
+}
+.carlights{
+  position:relative;
+  z-index:2;
+  width:100%;
+  height:100%;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding-left: 10%;
+}
+.carlights-text {
+  width: 38%;
+  color: white;
+}
+.carlights-text h2{
+  font-size:38px;
+  letter-spacing:3px;
+  margin-bottom:26px;
+}
+
+.carlights-text p{
+  font-size:20px;
+  line-height:1.9;
+  opacity:0.88;
+}
+.carlights-images{
+  position:relative;
+  width:54%;
+  height:500px;
+}
+.img-card{
+  position:absolute;
+  width:620px;
+  height:270px;
+  clip-path:polygon(
+    20% 0%,
+    100% 0%,
+    80% 100%,
+    0% 100%);
+  overflow:hidden;
+  background:transparent;
+}
+.img-card img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+}
+.top-card{
+  top:0;
+  right:220px;
+  z-index:1;
+}
+.bottom-card{
+  bottom:0;
+  right:160px;
+  z-index:0;
+}
+
 .page4 {
   width: 100%;
   height: 100%;
@@ -179,8 +251,8 @@ html, body {
   position: absolute;
   inset: 0;
   background-image: url(./images/behance_img_5\ \(mirror\).jpg);
-  background-size: cover;
-  background-position: center;
+  background-size: contain;
+  background-position: right;
   clip-path: polygon(
     65% 0, 
     100% 0, 
@@ -380,7 +452,7 @@ html, body {
   font-size: 14px;
   margin-top: 35px;
   width: 170px;
-  padding: 14px 0;
+  padding: 14px ;
   letter-spacing: 2px;
   cursor: pointer;
 
