--- a/car-site/bmw-style.css
+++ b/car-site/bmw-style.css
@@ -128,9 +128,7 @@ html, body {
   width: 100%;
   height: 100%;
   display: flex;
-  background-image: url("./images/behance_img_2.jpg");
-  background-size: cover;
-  background-position: center;
+  
 
 }
 
@@ -231,8 +229,8 @@ html, body {
   content: "";
   position: absolute;
   inset: 0;
-  background: linear-gradient(120deg , rgba(40,30,60,.55) , rgba(120,40,70,.45));
-  backdrop-filter: blur(4px);
+  background: linear-gradient(120deg , rgba(40,30,60,.55) , rgba(120,40,70,.15));
+  backdrop-filter: blur(14px);
   z-index: 1;
 }
 
@@ -246,8 +244,8 @@ html, body {
   backdrop-filter: blur(7px);
   clip-path:polygon(
     0% 0%, 
-    93% 0%, 
-    50% 100%, 
+    90% 0%, 
+    54% 100%, 
     0% 100%
   );
   z-index: 2;
@@ -271,22 +269,74 @@ html, body {
 }
 .specification {
   position: absolute;
-  right: 6%;
+  right: 17%;
   top: 45%;
   transform: translateY(-50%);
   z-index: 3;
+  /* z-index: 3;
   display: flex;
   align-items: center;
-  gap: -10px;
+  gap: -10px; */
 }
 .specification img.engine {
-  width: 700px;
+  width: 820px;
+  position: relative;
+  z-index: 2;
+  
 
 }
 .specification img.emplom {
-  width: 500px;
+  position: absolute;
+  width: 450px;
+  right: -120px;
+  top: 45%;
   opacity: .5;
+  /* z-index: 1; */
 }
+.stats {
+  position: absolute;
+  bottom: 12%;
+  left: 28%;
+  display: flex;
+  gap: 18px;
+  z-index: 3;
+}
+.stat-box {
+  width: 260px;
+  height: 100px;
+  background: rgba(0, 0, 0, .40);
+  clip-path:polygon(
+    18% 0%,
+    100% 0%,
+    82% 100%,
+    0% 100%
+  );
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  letter-spacing: 1px;
+}
+ .stat-box .top-span {
+  font-size: 12px;
+  opacity: 0.7;
+  letter-spacing: 1px;
+  text-align: right;
+}
+.stat-box h3 {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 1;
+  margin: 4px 0;
+}
+.stat-box .bottom-span {
+  font-size: 12px;
+  opacity: 0.6;
+  letter-spacing: 1px;
+  text-align: left;
+}
+
 
 
 .page5 {
