--- a/car-site/bmw-style.css
+++ b/car-site/bmw-style.css
@@ -132,7 +132,7 @@ html, body {
   overflow: hidden;
   background:
     radial-gradient(circle at 15% 30%, rgba(40,0,80,.95), transparent 55%),
-    radial-gradient(circle at 85% 70%, rgba(180,0,80,.95), transparent 60%),
+    radial-gradient(circle at 85% 70%, rgba(180,0,80,.75), transparent 60%),
     linear-gradient(120deg, rgb(8,0,20), rgb(18,0,35), rgb(30,0,40));
   display: flex;
   justify-content: center;
@@ -178,10 +178,10 @@ html, body {
 }
 .page-background{
   position:absolute;
-  right:7%;
+  right:3%;
   top:50%;
   transform:translateY(-50%);
-  width:640px;
+  width:730px;
   height:420px;
   clip-path: polygon(
     32% 0%,
@@ -199,12 +199,12 @@ html, body {
 }
 .car-cut{
   position:absolute;
-  right:40px;
+  left:100px;
   bottom:20px;
   z-index:2;
 }
 .car-cut img{
-  width:1000px;
+  width:1200px;
   filter: drop-shadow(0 30px 45px rgba(0,0,0,.7));
 }
 
